# OpenGLTests

./: .gitignore  CMakeLists.txt  README.md
res/shaders/: Basic.shader  Batch.shader  Color.shader  Projection.shader  Rainbow.shader
src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp  renderer.cpp  renderer.h
src/test/: BatchRenderTest.cpp  BatchRenderTest.h  ClearColorTest.cpp  ClearColorTest.h  ObjectColorTest.cpp  ObjectColorTest.h  ProjectionsTest.cpp  ProjectionsTest.h  RainbowTest.cpp  RainbowTest.h  Rotation.cpp  Rotation.h  Test.cpp  Test.h  TexTest.cpp  TexTest.h  ThirdDimTest.cpp  ThirdDimTest.h
